<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    android:textSize="25dp"
    android:layout_gravity="center"
	android:gravity="center"
    />
<Button 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:gravity="center" android:id="@+id/bCam1on" android:text="@string/s_httpPOSTon">
</Button>

<Button 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:gravity="center" android:id="@+id/bCam1off" android:text="@string/s_httpPOSToff">
</Button>

<Button 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:gravity="center" android:id="@+id/bCam2on" android:text="@string/s_httpPOSTon_cam2">
</Button>

<Button 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:gravity="center" android:id="@+id/bCam2off" android:text="@string/s_httpPOSToff_cam2">
</Button>

</LinearLayout>
